--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-plugin-sitemap": "^2.0.3",
+    "gatsby-plugin-slug": "^1.0.1",
     "gatsby-plugin-typography": "^2.2.2",
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-images": "^2.0.6",
