--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "paulgalow.com",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": ">=14.3.0",
+    "npm": ">=6.14.0"
+  },
   "dependencies": {
     "gatsby": "^2.22.8",
     "gatsby-cli": "^2.12.33",
