--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,9 @@
 #     base    = ""
 #     publish = "public"
 #     command = "npm run build"
+[build]
+    command = "npm run build"
+    environment = { NODE_VERSION = "14.3.0" }
 
 # We’ll need to handle requests to any non-root paths of our app.
 # Our frontend is a single-page app and the routing is handled on the client side.
