--- a/package.json
+++ b/package.json
@@ -7,40 +7,39 @@
     "npm": ">=6.14.4"
   },
   "dependencies": {
-    "gatsby": "^2.23.3",
-    "gatsby-cli": "^2.12.45",
-    "gatsby-plugin-feed": "^2.5.5",
-    "gatsby-plugin-google-analytics": "^2.3.4",
-    "gatsby-plugin-manifest": "^2.4.11",
-    "gatsby-plugin-offline": "^3.2.9",
-    "gatsby-plugin-react-helmet": "^3.3.4",
-    "gatsby-plugin-sharp": "^2.6.11",
-    "gatsby-plugin-sitemap": "^2.4.5",
-    "gatsby-plugin-slug": "^1.0.1",
-    "gatsby-plugin-typography": "^2.5.4",
-    "gatsby-remark-copy-linked-files": "^2.3.5",
-    "gatsby-remark-images": "^3.3.10",
-    "gatsby-remark-responsive-iframe": "^2.4.5",
-    "gatsby-remark-smartypants": "^2.3.4",
-    "gatsby-remark-vscode": "^2.1.2",
-    "gatsby-source-filesystem": "^2.3.11",
-    "gatsby-transformer-remark": "^2.8.15",
-    "gatsby-transformer-sharp": "^2.5.5",
-    "lodash": "^4.17.15",
+    "gatsby": "^2.27.2",
+    "gatsby-cli": "^2.14.0",
+    "gatsby-plugin-feed": "^2.8.0",
+    "gatsby-plugin-google-analytics": "^2.6.0",
+    "gatsby-plugin-manifest": "^2.7.0",
+    "gatsby-plugin-offline": "^3.5.0",
+    "gatsby-plugin-react-helmet": "^3.5.0",
+    "gatsby-plugin-sharp": "^2.9.0",
+    "gatsby-plugin-sitemap": "^2.7.0",
+    "gatsby-plugin-slug": "^1.1.1",
+    "gatsby-plugin-typography": "^2.7.0",
+    "gatsby-remark-copy-linked-files": "^2.5.0",
+    "gatsby-remark-images": "^3.6.0",
+    "gatsby-remark-responsive-iframe": "^2.6.0",
+    "gatsby-remark-smartypants": "^2.5.0",
+    "gatsby-remark-vscode": "^3.2.0",
+    "gatsby-source-filesystem": "^2.6.1",
+    "gatsby-transformer-remark": "^2.11.1",
+    "gatsby-transformer-sharp": "^2.7.0",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1",
+    "react-helmet": "^6.1.0",
     "react-typography": "^0.16.19",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75",
+    "typeface-merriweather": "^1.1.13",
+    "typeface-montserrat": "^1.1.13",
     "typography": "^0.16.19",
     "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.20.0",
-    "gh-pages": "^2.2.0",
-    "prettier": "^1.19.1"
+    "eslint": "^7.14.0",
+    "eslint-plugin-react": "^7.21.5",
+    "prettier": "^2.2.0"
   },
   "scripts": {
     "build": "gatsby build",
