--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "npm": ">=6.14.4"
   },
   "dependencies": {
-    "gatsby": "^3.14.0",
-    "gatsby-cli": "^3.14.0",
+    "gatsby": "^3.14.6",
+    "gatsby-cli": "^3.14.2",
     "gatsby-plugin-feed": "^3.14.0",
     "gatsby-plugin-google-analytics": "^3.14.0",
     "gatsby-plugin-manifest": "^3.14.0",
     "gatsby-plugin-offline": "^4.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
-    "gatsby-plugin-sharp": "^3.14.0",
+    "gatsby-plugin-sharp": "^3.14.3",
     "gatsby-plugin-sitemap": "^4.10.0",
     "gatsby-plugin-slug": "^2.0.0",
     "gatsby-plugin-typography": "^3.14.0",
@@ -38,7 +38,8 @@
   },
   "devDependencies": {
     "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.26.0",
+    "eslint-plugin-react": "^7.27.1",
+    "npm-check": "^5.9.2",
     "prettier": "^2.4.1"
   },
   "scripts": {
