--- a/package.json
+++ b/package.json
@@ -39,13 +39,14 @@
   "devDependencies": {
     "eslint": "^8.7.0",
     "eslint-plugin-react": "^7.28.0",
-    "npm-check": "^5.9.2",
+    "npm-check-updates": "^12.2.1",
     "prettier": "^2.5.1"
   },
   "scripts": {
     "build": "gatsby build",
     "dev": "gatsby develop",
     "format": "prettier --write \"src/**/*.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "update": "ncu -i"
   }
 }
